src/objects/Accounting_BillingAccountAdmin__c.object
<CustomObject>
    <label>Accounting_BillingAccountAdmin</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_BillingAccountAdmin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>domain__c</fullName>
        <label>domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                    <label>CommCareHQ</label>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>web_user__c</fullName>
        <label>web_user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>